--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "css-minimizer-webpack-plugin": "^5.0.1",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
+    "node-sass": "^9.0.0",
     "sass": "^1.68.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
@@ -20,8 +21,9 @@
     "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
-    "build": "webpack",
-    "start": "webpack serve --open"
+    "start": "webpack serve --env port=3000",
+    "build:prod": "webpack  --env mode=production",
+    "build:dev": "webpack  --env mode=developme"
   },
   "author": "",
   "license": "ISC"
